--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -3,6 +3,6 @@ ENV MYSQL_ROOT_PASSWORD=secret
 ENV MYSQL_DATABASE=test
 ENV MYSQL_USER=user
 ENV MYSQL_PASSWORD=password
-COPY ./mysql /var/lib/mysql
+COPY . /var/lib/mysql
 
 
